src/objects/Use_Case__c.object
<CustomObject>
    <description>BME - A Use Case represents a specific business scenario. Multiple Use Cases can exist for a Work Package and multiple requirements can be supported by Use Case. With each Use Case the user can create Use Case Steps that represent the incremental actions that, when joined in sequence, make up a Use Case.</description>
    <fields>
        <fullName>Actor__c</fullName>
        <label>Actor(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Profile1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of scenario/use case</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Condition__c</fullName>
        <label>Post-Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_condition__c</fullName>
        <label>Pre-Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Dependencies__c</fullName>
        <label>Process Dependencies</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Related Use Cases</relationshipLabel>
        <relationshipName>UseCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Use_Cases_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_off_on__c</fullName>
        <label>Signed off on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Touch_Points__c</fullName>
        <label>System Touch Points</label>
        <picklist>
            <picklistValues>
                <fullName>Point1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point6</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <label>Trigger</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Use_Case_Name__c</fullName>
        <label>Use Case Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Use Case</label>
    <listViews>
        <fullName>AllUseCases</fullName>
        <columns>NAME</columns>
        <columns>Use_Case_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Actor__c</columns>
        <columns>Trigger__c</columns>
        <columns>Work_Package__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Use Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Use_Cases</fullName>
        <columns>NAME</columns>
        <columns>Use_Case_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Actor__c</columns>
        <columns>Trigger__c</columns>
        <columns>Work_Package__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Use Cases</label>
    </listViews>
    <nameField>
        <displayFormat>UC-{00000}</displayFormat>
        <label>Use Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>